# dataflowhub

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt  wait_for_db.py
.github/workflows/: DRF.yml
config/: celery.py  settings.py  tasks.py  urls.py
core/: urls.py
etl/: apps.py  models.py  serializers.py  tasks.py  transformer.py  urls.py  views.py
etl/migrations/: 0001_initial.py  0002_alter_etljob_last_run_alter_etljob_source_type_and_more.py  0003_alter_etljob_last_run_alter_etljob_source_config_and_more.py  0004_etljobrun.py  0005_etljobrun_result.py  0006_transformedrecord.py  0007_alter_transformedrecord_job_run.py  0008_delete_transformedrecord.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
